[gd_scene load_steps=61 format=3 uid="uid://coyi5e3kbvrbc"]

[ext_resource type="Texture2D" uid="uid://cnwducyhh4s4p" path="res://assets/Player/adventurer-Sheet.png" id="1_3vyb7"]
[ext_resource type="Script" uid="uid://dxq8015am3ht5" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="PackedScene" uid="uid://b83buy4rek060" path="res://scenes/hurt_box.tscn" id="4_qlg0r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i4ail"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_a38lo"]
atlas = ExtResource("1_3vyb7")
region = Rect2(50, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ni07"]
atlas = ExtResource("1_3vyb7")
region = Rect2(100, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_l71n6"]
atlas = ExtResource("1_3vyb7")
region = Rect2(150, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke2ow"]
atlas = ExtResource("1_3vyb7")
region = Rect2(200, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujl30"]
atlas = ExtResource("1_3vyb7")
region = Rect2(250, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_31cv2"]
atlas = ExtResource("1_3vyb7")
region = Rect2(300, 222, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf23h"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_dt7fs"]
atlas = ExtResource("1_3vyb7")
region = Rect2(50, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqfne"]
atlas = ExtResource("1_3vyb7")
region = Rect2(100, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_wnwbv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(150, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl8cc"]
atlas = ExtResource("1_3vyb7")
region = Rect2(200, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_487ah"]
atlas = ExtResource("1_3vyb7")
region = Rect2(250, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_md1ol"]
atlas = ExtResource("1_3vyb7")
region = Rect2(300, 259, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj30b"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc3p3"]
atlas = ExtResource("1_3vyb7")
region = Rect2(50, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_hax0n"]
atlas = ExtResource("1_3vyb7")
region = Rect2(100, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfm1y"]
atlas = ExtResource("1_3vyb7")
region = Rect2(200, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulsm"]
atlas = ExtResource("1_3vyb7")
region = Rect2(250, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_4r5pv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(300, 0, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_60mlk"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4otl"]
atlas = ExtResource("1_3vyb7")
region = Rect2(300, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2b1d"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 333, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs1tg"]
atlas = ExtResource("1_3vyb7")
region = Rect2(50, 333, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dvfe"]
atlas = ExtResource("1_3vyb7")
region = Rect2(100, 333, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_giy8y"]
atlas = ExtResource("1_3vyb7")
region = Rect2(150, 333, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdfoy"]
atlas = ExtResource("1_3vyb7")
region = Rect2(200, 333, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhpqf"]
atlas = ExtResource("1_3vyb7")
region = Rect2(250, 333, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5jhy"]
atlas = ExtResource("1_3vyb7")
region = Rect2(150, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_holxr"]
atlas = ExtResource("1_3vyb7")
region = Rect2(200, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_mx1m4"]
atlas = ExtResource("1_3vyb7")
region = Rect2(250, 296, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2els"]
atlas = ExtResource("1_3vyb7")
region = Rect2(150, 185, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqgy"]
atlas = ExtResource("1_3vyb7")
region = Rect2(200, 185, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("1_3vyb7")
region = Rect2(250, 185, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("1_3vyb7")
region = Rect2(300, 185, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("1_3vyb7")
region = Rect2(100, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("1_3vyb7")
region = Rect2(150, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("1_3vyb7")
region = Rect2(200, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(250, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("1_3vyb7")
region = Rect2(300, 74, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxlsd"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha2mi"]
atlas = ExtResource("1_3vyb7")
region = Rect2(50, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_apa73"]
atlas = ExtResource("1_3vyb7")
region = Rect2(100, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("1_3vyb7")
region = Rect2(50, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("1_3vyb7")
region = Rect2(100, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("1_3vyb7")
region = Rect2(150, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("1_3vyb7")
region = Rect2(200, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("1_3vyb7")
region = Rect2(250, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8ls1"]
atlas = ExtResource("1_3vyb7")
region = Rect2(300, 37, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gjji"]
atlas = ExtResource("1_3vyb7")
region = Rect2(150, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2ulf"]
atlas = ExtResource("1_3vyb7")
region = Rect2(200, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e8lb"]
atlas = ExtResource("1_3vyb7")
region = Rect2(250, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gdjj"]
atlas = ExtResource("1_3vyb7")
region = Rect2(300, 111, 50, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc3ue"]
atlas = ExtResource("1_3vyb7")
region = Rect2(0, 148, 50, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_tuyoq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4ail")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a38lo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ni07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l71n6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke2ow")
}],
"loop": false,
"name": &"attack1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujl30")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31cv2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf23h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dt7fs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqfne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wnwbv")
}],
"loop": false,
"name": &"attack2",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl8cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_487ah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md1ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj30b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc3p3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hax0n")
}],
"loop": false,
"name": &"attack3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfm1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4r5pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60mlk")
}],
"loop": true,
"name": &"crouch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4otl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2b1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs1tg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dvfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giy8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdfoy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhpqf")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5jhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_holxr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mx1m4")
}],
"loop": true,
"name": &"hurt",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2els")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}],
"loop": true,
"name": &"jump",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxlsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha2mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apa73")
}],
"loop": true,
"name": &"jump2",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8ls1")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gjji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2ulf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e8lb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gdjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc3ue")
}],
"loop": true,
"name": &"slide",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fjrip"]
radius = 6.0
height = 22.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g2els"]
radius = 9.0
height = 26.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_g2els")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -18)
sprite_frames = SubResource("SpriteFrames_tuyoq")
animation = &"jump2"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -11)
shape = SubResource("CapsuleShape2D_fjrip")

[node name="SlideTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="Marker2D" type="Marker2D" parent="."]

[node name="HitBox" type="Area2D" parent="Marker2D"]
collision_layer = 8
collision_mask = 0

[node name="CollisionShapeRight" type="CollisionShape2D" parent="Marker2D/HitBox"]
position = Vector2(16, -16)
shape = SubResource("CapsuleShape2D_g2els")
disabled = true
debug_color = Color(0, 0.647288, 0.216855, 0.42)

[node name="CollisionShapeLeft" type="CollisionShape2D" parent="Marker2D/HitBox"]
position = Vector2(-16, -16)
shape = SubResource("CapsuleShape2D_g2els")
disabled = true
debug_color = Color(0, 0.647059, 0.215686, 0.419608)

[node name="HurtBox" parent="." instance=ExtResource("4_qlg0r")]
position = Vector2(0, -12)
collision_layer = 18
collision_mask = 32

[node name="CollisionShape2D" parent="HurtBox" index="0"]
scale = Vector2(1.6, 3)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
[connection signal="timeout" from="SlideTimer" to="." method="_on_slide_timer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]

[editable path="HurtBox"]
